--- a/model_func.ipynb
+++ b/model_func.ipynb
@@ -30,6 +30,14 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7365a289",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 226,
    "id": "9137c652",
    "metadata": {},
@@ -129,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "95221590",
+   "id": "126131bc",
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "a1cfa73b",
+   "id": "8695d772",
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +216,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "f87e78f6",
+   "id": "fae50805",
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "8e0b8295",
+   "id": "0a3dd0a8",
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +524,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "5a01f9e2",
+   "id": "83097f2f",
    "metadata": {},
    "outputs": [
     {
@@ -3150,7 +3158,7 @@
   {
    "cell_type": "code",
    "execution_count": 216,
-   "id": "fe7f6656",
+   "id": "99617f99",
    "metadata": {},
    "outputs": [
     {
@@ -3390,7 +3398,7 @@
   {
    "cell_type": "code",
    "execution_count": 217,
-   "id": "dce93835",
+   "id": "08666881",
    "metadata": {},
    "outputs": [
     {
@@ -3411,7 +3419,7 @@
   {
    "cell_type": "code",
    "execution_count": 218,
-   "id": "e1bb84c4",
+   "id": "72107efa",
    "metadata": {},
    "outputs": [
     {
@@ -3432,7 +3440,7 @@
   {
    "cell_type": "code",
    "execution_count": 219,
-   "id": "b9d56806",
+   "id": "c8d49c40",
    "metadata": {},
    "outputs": [
     {
@@ -3450,7 +3458,7 @@
   {
    "cell_type": "code",
    "execution_count": 220,
-   "id": "ee5ee2bd",
+   "id": "600f878f",
    "metadata": {},
    "outputs": [
     {
@@ -3509,7 +3517,7 @@
   {
    "cell_type": "code",
    "execution_count": 221,
-   "id": "ad2bfacc",
+   "id": "f946dc7f",
    "metadata": {},
    "outputs": [
     {
@@ -13631,7 +13639,7 @@
   {
    "cell_type": "code",
    "execution_count": 232,
-   "id": "7b478eae",
+   "id": "887386e6",
    "metadata": {},
    "outputs": [
     {
@@ -13684,7 +13692,7 @@
   {
    "cell_type": "code",
    "execution_count": 233,
-   "id": "fccab86a",
+   "id": "5ca5fcdb",
    "metadata": {},
    "outputs": [
     {
@@ -15812,7 +15820,7 @@
   {
    "cell_type": "code",
    "execution_count": 235,
-   "id": "01ec36b3",
+   "id": "5afbdd29",
    "metadata": {},
    "outputs": [
     {
@@ -15833,7 +15841,72 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b07bd80",
+   "id": "543ad95c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f66a9ba3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1817113e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 236,
+   "id": "098d5c2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "euler (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 236,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "function trapezoidal(f, x0, xn, y0, n)\n",
+    "    # Use the trapezoidal method to propagate the orbits\n",
+    "    # x0: initial time\n",
+    "    # xn: final time\n",
+    "    # n: number of steps\n",
+    "    # y0: initial state\n",
+    "\n",
+    "    h = (xn - x0)/n  # time step\n",
+    "    xs = zeros(floor(Int,n+1))\n",
+    "    ys = zeros(floor(Int,n+1),length(y0))\n",
+    "    xs[1] = x0\n",
+    "    ys[1,:] = y0\n",
+    "    \n",
+    "    for i in 1:floor(Int,n)\n",
+    "        xs[i + 1] = xs[i] + h\n",
+    "        #ys[i + 1,:] = ys[i,:] + h * f(ys[i,:])\n",
+    "        ys[i+1,:] = NewtonNd(xs[i],h,0, 1e-10, 1e-8, 1e-8, 100, false, false)\n",
+    "    end\n",
+    "    \n",
+    "    return ys\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6a4a2ee",
    "metadata": {},
    "outputs": [],
    "source": []
