--- a/Untitled2.ipynb
+++ b/Untitled2.ipynb
@@ -5,7 +5,67 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "function [dz] = GenerateInput_HeatBar(InputName,Ka, Km, Ta, Tsink, L, N, h_s )\n",
+    "% This function generates an equivalent network representation \n",
+    "% (in the form of current sources and thermal resistors) \n",
+    "% of a one-dimensional leaky heat-conducting bar\n",
+    "% excited with a uniform heat source along the full length of the bar. \n",
+    "% This function assumes a finite difference discretization of the heat diffusion equations.\n",
+    "% We assumes a heat sink connected at the left terminal and holding the temperature at Tsink (Dirichlet)\n",
+    "% We assume no heat exchange at the right terminal (Neumann), \n",
+    "% L is the length of the bar.\n",
+    "% N is number of nodal unknowns to solve for (i.e. order of the system)\n",
+    "%   which is also the number of sections of the bar, \n",
+    "%   hence the length of each section is dz=L/N\n",
+    "%\n",
+    "% EXAMPLES OF USE:\n",
+    "% dz = GenerateInput_HeatBar(InputName, Ka, Km, Ta, Tsink, L, N, h_s);\n",
+    "% GenerateInput_HeatBar('ps1p2', Ka, Km, Ta, Tsink, L, N, h_s);\n",
+    "\n",
+    "dz = L/N;                    % Compute descretization ste\n",
+    "Rm = dz/Km;                  % thermal resistor accounting for diffusion along the metal\n",
+    "Ra = 1/(Ka*dz);              % thermal resistor accounting for leakage out to the air\n",
+    "Is = (h_s*dz);               % heat source contribution from an external lamp\n",
+    "Ia = (Ka*dz*Ta);             % Norton equivalent heat source due to air temperature\n",
+    "Isink = Tsink / Rm;          % Norton equivalent heat source due to heat sink on left side\n",
+    "\n",
+    "%% Generate Resistors\n",
+    "%Resistors = zeros(2*N,3);\t  % for no horiontal heat exchange at right termination\n",
+    "Resistors = zeros(2*N-1,3); % for no heat exchange of any kind at right termination\n",
+    "for i=1:size(Resistors,1)    \n",
+    "   if i<=N\n",
+    "        Resistors(i,1) = i-1;\n",
+    "        Resistors(i,2) = i;\n",
+    "        Resistors(i,3) = Rm;\n",
+    "     else\n",
+    "        Resistors(i,1) = 0;\n",
+    "        Resistors(i,2) = i-N;\n",
+    "        Resistors(i,3) = Ra;\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "%% Generate Current Sources\n",
+    "%Isources=zeros(N+1,3);       % for no horiontal heat exchange at right termination\n",
+    "Isources=zeros(N,3);        % for no heat exchange of any kind at right termination\n",
+    "for j=1:size(Isources,1) \n",
+    "   %if j<=N                   % for no horiontal heat exchange at right termination\n",
+    "%    if j<=N-1                % for no heat exchange of any kind at right termination\n",
+    "      Isources(j,1) = 0;\n",
+    "      Isources(j,2) = j;\n",
+    "      Isources(j,3) = Is+Ia;\n",
+    "%    else\n",
+    "%       Isources(j,1) = 0;\n",
+    "%       Isources(j,2) = 1;    \n",
+    "%       Isources(j,3) = Isink;\n",
+    "%     end\n",
+    "end\n",
+    "\n",
+    "Input_Save(InputName,Resistors, Isources)\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
