--- a/mod_reduced_2.ipynb
+++ b/mod_reduced_2.ipynb
@@ -345,7 +345,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# this is where I'm having trouble adding the reduced order to the current model function"
+    "# NOTES: Implementation issues\n",
+    "Ideally, the validity of the solutions for the full system and its reduced order counterparts would be evaluated with the transient reference method, and the reference confidence can be used to determine how trustable the final states for the system are"
    ]
   },
   {
